--- a/style.css
+++ b/style.css
@@ -10,7 +10,7 @@
     font-size: 10px;
   }
 
-  * {
+  body {
     margin: 0 auto;
     box-sizing: border-box;
   }
@@ -58,6 +58,7 @@
 
   nav {
     display: flex;
+
     justify-content: space-between;
     height: 44px;
     align-items: center;
@@ -152,6 +153,7 @@ nav .search_container img {
 .top_content {
     display: flex;
     gap: 30px;
+    width: 80vw;
 }
 
 .top_content_img img {
@@ -187,9 +189,14 @@ nav .search_container img {
 
 .blog {
     display: flex;
-    padding: 0px 135px;
-    margin: 60px 0;
+    width: 80vw;
     gap: 130px;
+    justify-content: center;
+    margin: 60px auto;
+}
+
+.blog .left_content {
+    max-width: 546px;
 }
 
 .blog .right_content .post{
@@ -200,12 +207,14 @@ nav .search_container img {
 /* TOPICS */
 
 .topics {
-    padding-inline: 135px;
     display: flex;
-    margin: 60px 0;
-    justify-content: space-between;
+    margin: 0 auto;
+    justify-content: center;
+    align-items: center;
+    gap: 30px;
+    width: 80vw;
 }
 
-.post img {
-    width: 300px;
+.topics img {
+    width: 50px;
 }
